message: Bail out of get_text_plain if len == 0

Otherwise it'll segfault in g_utf8_validate().

https://bugzilla.gnome.org/show_bug.cgi?id=634182